  * DrawGetVectorGraphics() now returns proper XML (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27751).
  * Support writing EXR files with different color types (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=27759).
  * Prefer PKG_CHECK_MODULES() when searching for delegate libraries.

2015-06-01  6.9.1-4 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-4, SVN revision 18697.

2015-06-01  6.9.1-4 Cristy  <quetzlzacatenango@image...>
  * Support 'restrict' keyword under Windows.

2015-05-25  6.9.1-4 Dirk Lemstra <dirk@lem.....org>
  * Added support for reading a user supplied layer mask in PSD files.
  * Added support for reading photoshop layers in TIFF files.

2015-05-24  6.9.1-3 Cristy  <quetzlzacatenango@image...>
  * New version 6.9.1-3, SVN revision 18623.

2015-05-03  6.9.1-3 Dirk Lemstra <dirk@lem.....org>
  * Fixed transparency issue with 16-bit tga files (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27469).
  * Fixed writing label and comment in tiff images (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=25516).
  * Jpeg images no longer have pixels per inch as a default value for density
    units when the density is not set (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27589).
  * Added support for setting the font color with -fill to the pango coder.

2015-05-03  6.9.1-3 Glenn Randers-Pehrson <glennrp@image...>
  * Fixed bug with "-define png:format=x" in png.c, introduced in version
    6.8.9-0, that caused the define to be ignored.
  * Replaced some dead code in ReadJNGImage with an assert().
  * Avoid palette-building when writing a grayscale PNG (reference
    http://www.imagemagick.org/discourse-server/viewtopic.php?f=3&t=27580).

2015-04-20  6.9.1-3 Cristy  <quetzlzacatenango@image...>
  * Support -define compose:clamp=false option (reference